--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ section {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
-    align-items: center;
+    justify-content: center;
     gap: 40px;
 }
 
@@ -46,8 +46,14 @@ div {
 
 .stars-chevron {
     color: var(--icon-color);
+    display: flex;
+    justify-content: space-between;
 }
 
-.bi-star-fill {
-    margin: 1px;
+.header-review .bi-star-fill {
+    font-size: 24px;
+}
+
+p {
+    height: 150px;
 }
